---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\n          import mappers\n\n          pub fn main() {\n            mappers.id\n          }\n        "
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-spec main() -> fun((N) -> N).
main() ->
    fun mappers:identity/1.

